--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: calc(14px + 0.2vw);
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 }
